--- a/app/src/main/res/layout/activity_basic.xml
+++ b/app/src/main/res/layout/activity_basic.xml
@@ -31,7 +31,9 @@
                     android:id="@+id/iv_back"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:padding="20dp"
+                    android:padding="5dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_back"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
